docs(iter-30): LESSONS L-064/065/066 + CHANGELOG iter 28-29 + PROGRESS/TODOS metrics
- LESSONS.md: +3 lessons
  - L-064: Testcontainers @ServiceConnection bypass via @ActiveProfiles('container')
  - L-065: Camel Kafka route URI ?brokers= required + System.getenv fallback
  - L-066: MockMvc webAppContextSetup + springSecurity() pattern (8 files, 49 tests)
- CHANGELOG: +iter 28 (51 promotion + 21 cms tests re-enabled) + iter 29 (4 integration + 3 URI fixes)
- PROGRESS.md: 24 iterations, 139 tests re-enabled, OpenShift tags 1.8.57/1.8.58
- TODOS.md: Production Score + Last Audit + Last Release updated

Cluster: 44/44 pods Running, 0 fail